// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emphasis should match styles 1`] = `
.emotion-0 {
  background: transparent;
  color: #666c76;
  font-style: italic;
}

<div>
  <em
    class="emotion-0"
  >
    hello
  </em>
</div>
`;

exports[`Emphasis should not output styles when unstyled is set 1`] = `
<div>
  <em
    class="emotion-0"
  >
    hello
  </em>
</div>
`;
